added fake html content

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,7 +38,7 @@ body {
 
 .content-tile.jumped {
   background-color: lightgrey;
-  margin-top: 6vh;
+  // margin-top: 6vh;
 }
 
 .content-tile.first {
