adding check if server-side ; changed initial state to static values

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,16 +78,16 @@ body {
 }
 
 .content-tile.jumped {
-  background-color: lightgrey;
+  // background-color: lightgrey;
 }
 
 .content-tile.first {
   margin-top: 6vh;
-  background-color: green;
+  // background-color: green;
 }
 
 .content-tile:nth-child(even) {
-  background-color: darkgrey;
+  // background-color: darkgrey;
 }
 
 .yellow-box {
